# ProductAPI

./: README.md  config.py  pyproject.toml
app/: database.py  main.py
app/categories/: dao.py  models.py  routers.py  schemas.py
app/dao/: base.py
app/migrations/: env.py
app/migrations/versions/: d47bc4d73ded_.py
app/products/: dao.py  filter.py  models.py  routers.py  schemas.py
