[tool.poetry]
name = "productsapi"
version = "0.1.0"
description = "API For Products"
authors = ["s13sx7 <s13sx7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "1.13.3"
annotated-types = "0.7.0"
anyio = "4.6.2"
asyncpg = "0.29.0"
click = "8.1.7"
colorama = "0.4.6"
fastapi = "0.115.2"
greenlet = "3.1.1"
h11 = "0.14.0"
idna = "3.10"
mako = "1.3.5"
markupsafe = "3.0.1"
pydantic = "2.9.2"
pydantic-settings = "2.5.2"
pydantic-core = "2.23.4"
python-dotenv = "1.0.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.35"
starlette = "0.39.2"
typing-extensions = "4.12.2"
uvicorn = "0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
